# interoperability_learning_in_simplycode

1_JsonHttp/Client/: Curl requests.md
1_JsonHttp/Client/CatsApp/: apps.py
1_JsonHttp/MainServer/: Cats.cs  MainServer.sln  Program.cs
1_JsonHttp/MainServer/Properties/: launchSettings.json
2_CPP_ABI/CPP_API/: CMakeLists.txt  programExport.hpp  programLib.cpp  programLib.hpp
2_CPP_ABI/PyCalculator/: app.py
3_CLR_Python/MyLib/: MyLib.csproj  NameGenerator.cs
3_CLR_Python/MyLib/Properties/PublishProfiles/: FolderProfile.pubxml
3_CLR_Python/Py/: PrintName.py
4_CPP_ChaiScript/: CMakeLists.txt  guessAIScript.chaiscript  main.cpp
